--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "expo-constants": "~14.2.1",
     "expo-font": "^11.4.0",
     "expo-linking": "~4.0.1",
-    "expo-location": "^16.1.0",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
@@ -27,8 +27,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7",
-    "expo-updates": "~0.16.4"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
