--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "axios": "^1.4.0",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
+    "expo-file-system": "^15.4.3",
     "expo-font": "^11.4.0",
     "expo-linking": "~4.0.1",
+    "expo-location": "^16.1.0",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
+    "expo-task-manager": "^11.3.0",
     "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
